[package]
name = "tower-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum-core = "0.4.1"
bytes = "1.5.0"
futures-util = "0.3.29"
http = "1.0.0"
http-body = "1.0.0"
itoa = "1.0.10"
matchit = "0.7.3"
percent-encoding = "2.3.1"
pin-project-lite = "0.2.13"
tower = { version = "0.4.13", features = ["util"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
