[package]
name = "tower-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum-core = "0.4.1"
bytes = "1.5.0"
futures-util = "0.3.29"
http = "1.0.0"
http-body = "1.0.0"
itoa = "1.0.10"
matchit = "0.7.3"
percent-encoding = "2.3.1"
pin-project-lite = "0.2.13"
tower = { version = "0.4.13", features = ["util"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"

[dev-dependencies]
anyhow = "1.0"
axum = "0.7.2"
axum-macros = { version = "0.4.0", features = ["__private"] }
http-body-util = "0.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest = { version = "0.11.14", default-features = false, features = [
  "json",
  "stream",
  "multipart",
] }
rustversion = "1.0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde-human-readable"] }
tokio = { package = "tokio", version = "1.25.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "net",
  "test-util",
] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
uuid = { version = "1.0", features = ["serde", "v4"] }


[dev-dependencies.tower-http]
version = "0.5.0"
features = [
  # all tower-http features except (de)?compression-zstd which doesn't
  # build on `--target armv5te-unknown-linux-musleabi`
  "add-extension",
  "auth",
  "catch-panic",
  "compression-br",
  "compression-deflate",
  "compression-gzip",
  "cors",
  "decompression-br",
  "decompression-deflate",
  "decompression-gzip",
  "follow-redirect",
  "fs",
  "limit",
  "map-request-body",
  "map-response-body",
  "metrics",
  "normalize-path",
  "propagate-header",
  "redirect",
  "request-id",
  "sensitive-headers",
  "set-header",
  "set-status",
  "timeout",
  "trace",
  "util",
  "validate-request",
]
